test/bpmn/invalid/element-without-id.bpmn
<definitions id="test">
  <process id="elementWithoutIdTest" isExecutable="true">
    <startEvent id="">
      <outgoing>f1</outgoing>
    </startEvent>
    <endEvent id="endEvent">
      <incoming>f1</incoming>
    </endEvent>
    <sequenceFlow id="f1" sourceRef="" targetRef="endEvent" />
  </process>
</definitions>
